--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -63,17 +63,16 @@
       box-shadow: var(--layout-main-desktop-box-shadow);
     }
 
-    // Might be used in the future
-    // &::before {
-    //   -webkit-mask-image: var(--page-style-mi, var(--mi));
-    //   -webkit-mask-position: var(--page-style-mp, var(--mp));
-    //   -webkit-mask-repeat: var(--page-style-mr, var(--mr, no-repeat));
-    //   -webkit-mask-size: var(--page-style-ms, var(--ms));
-    //   mask-image: var(--page-style-mi, var(--mi));
-    //   mask-position: var(--page-style-mp, var(--mp));
-    //   mask-repeat: var(--page-style-mr, var(--mr, no-repeat));
-    //   mask-size: var(--page-style-ms, var(--ms));
-    // }
+    &::before {
+      -webkit-mask-image: var(--page-style-mi, var(--mi));
+      -webkit-mask-position: var(--page-style-mp, var(--mp));
+      -webkit-mask-repeat: var(--page-style-mr, var(--mr, no-repeat));
+      -webkit-mask-size: var(--page-style-ms, var(--ms));
+      mask-image: var(--page-style-mi, var(--mi));
+      mask-position: var(--page-style-mp, var(--mp));
+      mask-repeat: var(--page-style-mr, var(--mr, no-repeat));
+      mask-size: var(--page-style-ms, var(--ms));
+    }
   }
 
   &__wrapper {
