Split off customizer option for page shadow
And reverse the logic.

--- a/src/scss/common/_fullscreen.scss
+++ b/src/scss/common/_fullscreen.scss
@@ -30,7 +30,8 @@
 
     &__background {
       background: var(--e-fullscreen) !important;
-      box-shadow: none;
+      box-shadow: none !important;
+      filter: none !important;
     }
   }
 
