--- a/src/scss/common/_settings.scss
+++ b/src/scss/common/_settings.scss
@@ -16,20 +16,11 @@
   }
 }
 
-:root.page-style-borderless,
-:root.page-style-seamless {
+:root.no-page-shadow {
   --layout-main-mobile-box-shadow: none;
   --layout-main-desktop-box-shadow: none;
   --minimal-main-box-shadow: none;
-}
-
-:root.page-style-seamless {
-  --theme-color-base: 222 15 20; // 800
-  --e-0: var(--bg-800);
-}
-
-:root[data-mode=light].page-style-seamless {
-  --e-0: var(--bg-50);
+  --layout-main-drop-shadow: none;
 }
 
 :root.has-polygon-or-mask:not(.minimal) .main__background {
