--- a/src/scss/common/_settings.scss
+++ b/src/scss/common/_settings.scss
@@ -42,7 +42,18 @@
   filter: var(--polygon-battered-drop-shadow, var(--layout-main-drop-shadow));
 
   &::before {
-    clip-path: var(--page-style-polygon, var(--polygon-battered));
+    clip-path: var(--page-style-polygon-mobile, var(--polygon-battered-mobile));
+
+    @include bp(tablet) {
+      left: 4px;
+      right: 4px;
+      clip-path: var(--page-style-polygon, var(--polygon-battered));
+    }
+
+    @include bp(desktop) {
+      left: 0;
+      right: 0;
+    }
   }
 }
 
@@ -57,6 +68,7 @@
       --mp: top 0 left var(--this-left), top 0 left calc(var(--this-width) + var(--this-left) - 1px);
       --ms: var(--this-width) auto, calc(100% - calc(var(--this-width) + var(--this-left) - 1px)) 100%;
       --mr: repeat-y, no-repeat;
+      left: 0 !important;
 
       @include bp(640px) {
         border-radius: 0 var(--layout-border-radius-large) var(--layout-border-radius-large) 0;
