--- a/src/scss/common/_settings.scss
+++ b/src/scss/common/_settings.scss
@@ -5,13 +5,24 @@
 :root.header-image-style-battered {
   .header-background {
     --layout-header-background-box-shadow: none;
+    border-radius: 0 !important;
 
     &._shadow {
       filter: var(--layout-header-background-drop-shadow);
     }
 
     &__wrapper {
-      clip-path: var(--polygon-battered);
+      border-radius: 0 !important;
+      clip-path: var(--polygon-battered-mobile);
+
+      @include bp(tablet) {
+        margin: 0 4px;
+        clip-path: var(--polygon-battered);
+      }
+
+      @include bp(desktop) {
+        margin: 0;
+      }
     }
   }
 }
@@ -70,7 +81,7 @@
       left: 0 !important;
 
       @include bp(640px) {
-        border-radius: 0 var(--layout-border-radius-large) var(--layout-border-radius-large) 0;
+        border-radius: 0 var(--layout-border-radius-large) var(--layout-border-radius-large) 1.5rem;
       }
     }
   }
