--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -166,3 +166,54 @@
     }
   }
 }
+
+:root.inset-header-image .header-background {
+  left: 50%;
+  right: unset;
+  width: 100%;
+  transform: translate3d(-50%, 0, 0);
+
+  @include bp(desktop) {
+    border-radius: var(--layout-border-radius-large);
+    width: calc(var(--site-width) * 1.5);
+    max-width: min(calc(100vw - 2rem), 1980px);
+  }
+
+  &__wrapper {
+    @include bp(desktop) {
+      border-radius: var(--layout-border-radius-large);
+    }
+  }
+}
+
+:root.header-image-style-battered {
+  .header-background {
+    --layout-header-background-box-shadow: none;
+    border-radius: 0 !important;
+
+    &._shadow {
+      filter: var(--layout-header-background-drop-shadow);
+    }
+
+    &__wrapper {
+      border-radius: 0 !important;
+      clip-path: var(--polygon-battered-half);
+
+      @include bp(tablet) {
+        margin: 0 4px;
+        clip-path: var(--polygon-battered);
+      }
+
+      @include bp(desktop) {
+        margin: 0;
+      }
+    }
+  }
+}
+
+:root.header-image-style-battered:not(.inset-header-image) {
+  .header-background__wrapper {
+    --polygon-battered: var(--polygon-battered-half);
+    margin: 0;
+  }
+}
