--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -11,6 +11,12 @@
   }
 }
 
+:root.no-page-shadow {
+  --layout-main-box-shadow: none;
+  --minimal-main-box-shadow: none;
+  --layout-main-drop-shadow: none;
+}
+
 .site {
   position: relative;
   left: 0;
@@ -89,6 +95,60 @@
 :root:not(.no-background-textures, .minimal) body .main__background:not(.chapter__background) {
   background: {
     image: var(--layout-background-texture-main);
+  }
+}
+
+:root.has-polygon-or-mask:not(.minimal) .main__background {
+  background: none;
+  border-radius: 0;
+  box-shadow: none !important;
+  filter: var(--layout-main-drop-shadow);
+
+  &::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    display: block;
+    background-color: var(--e-1);
+  }
+}
+
+:root.page-style-battered:not(.minimal) .main__background {
+  filter: var(--layout-main-drop-shadow);
+
+  &::before {
+    clip-path: var(--polygon-battered-half);
+
+    @include bp(tablet) {
+      left: 4px;
+      right: 4px;
+      clip-path: var(--polygon-battered);
+    }
+
+    @include bp(desktop) {
+      left: 0;
+      right: 0;
+    }
+  }
+}
+
+:root.page-style-ringbook:not(.minimal) .main__background {
+  filter: var(--layout-main-drop-shadow);
+
+  @include bp(375px) {
+    &::before {
+      --this-left: #{get_clamp(-14, 0, 375, 768)};
+      --this-width: #{get_clamp(22, 26, 375, 768)};
+      --mi: url('../img/mask_ringbook.png'), var(--data-image-2x2-black);
+      --mp: top 0 left var(--this-left), top 0 left calc(var(--this-width) + var(--this-left) - 1px);
+      --ms: var(--this-width) auto, calc(100% - calc(var(--this-width) + var(--this-left) - 1px)) 100%;
+      --mr: repeat-y, no-repeat;
+      left: 0 !important;
+
+      @include bp(640px) {
+        border-radius: 0 var(--layout-border-radius-large) var(--layout-border-radius-large) 1.5rem;
+      }
+    }
   }
 }
 
