--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -152,6 +152,25 @@
   }
 }
 
+:root.page-style-chamfered:not(.minimal) .main__background {
+  filter: var(--layout-main-drop-shadow);
+
+  &::before {
+    --m: #{get_clamp(6, 12, 320, 768)};
+
+    clip-path: polygon(
+      0% var(--m),
+      var(--m) 0%,
+      calc(100% - var(--m)) 0%,
+      100% var(--m),
+      100% calc(100% - var(--m)),
+      calc(100% - var(--m)) 100%,
+      var(--m) 100%,
+      0% calc(100% - var(--m))
+    );
+  }
+}
+
 :root.page-style-interface-a:not(.minimal) .main__background {
   filter: var(--layout-main-drop-shadow);
 
