--- a/src/scss/customizer-snippets.scss
+++ b/src/scss/customizer-snippets.scss
@@ -132,3 +132,94 @@
     );
   }
 }
+
+:root.inset-header-image .header-background {
+  left: 50%;
+  right: unset;
+  width: 100%;
+  transform: translate3d(-50%, 0, 0);
+
+  @include bp(desktop) {
+    border-radius: var(--layout-border-radius-large);
+    width: calc(var(--site-width) * 1.5);
+    max-width: min(calc(100vw - 2rem), 1980px);
+  }
+
+  &__wrapper {
+    @include bp(desktop) {
+      border-radius: var(--layout-border-radius-large);
+    }
+  }
+}
+
+:root.header-image-style-battered {
+  .header-background {
+    --layout-header-background-box-shadow: none;
+    border-radius: 0 !important;
+
+    &._shadow {
+      filter: var(--layout-header-background-drop-shadow);
+    }
+
+    &__wrapper {
+      border-radius: 0 !important;
+      clip-path: var(--polygon-battered-half);
+
+      @include bp(tablet) {
+        margin-left: 4px;
+        margin-right: 4px;
+        clip-path: var(--polygon-battered);
+      }
+
+      @include bp(desktop) {
+        margin-left: 0;
+        margin-right: 0;
+      }
+    }
+  }
+}
+:root.header-image-style-battered:not(.inset-header-image) {
+  .header-background__wrapper {
+    --polygon-battered: var(--polygon-battered-half);
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
+:root:not(.minimal) .content-list-style-full {
+  --content-list-item-background: var(--content-list-item-background-full);
+
+  .chapter-group__list-item {
+    padding: .5rem 8px .5rem 6px;
+  }
+
+  .story__blog-list-item {
+    padding: .5rem 8px;
+  }
+
+  .card__link-list-item {
+    padding-left: 0.35em;
+  }
+}
+
+:is(:root, :root.minimal) .content-list-style-free {
+  --content-list-item-background: none;
+
+  :is(.chapter-group__list-item, .story__blog-list-item) {
+    border-radius: 0;
+    border-bottom: none;
+  }
+}
+
+:is(:root, :root.minimal) .content-list-style-lines {
+  --content-list-item-background: none;
+
+  :is(.chapter-group__list-item, .story__blog-list-item, .card__link-list-item) {
+    border-radius: 0;
+    border-bottom: 1.5px solid var(--layout-color-separator);
+  }
+
+  .card__link-list-item:last-child {
+    border-bottom: none;
+  }
+}
