--- a/css/customizer-snippets.css
+++ b/css/customizer-snippets.css
@@ -227,3 +227,12 @@
   --ms: 100% var(--d), 100% calc(100% - var(--c) * 2), 100% var(--d);
   --mp: top calc(-1 * clamp(0px, 0.5089058524vw - 1.9083969466px, 2px)) left 0, top var(--c) left 0, bottom left;
 }
+
+:root.header-image-style-polygon-chamfered .header-background {
+  border-radius: 0 !important;
+}
+:root.header-image-style-polygon-chamfered .header-background__wrapper {
+  --m: clamp(6px, 1.3392857143vw + 1.7142857143px, 12px);
+  border-radius: 0 !important;
+  clip-path: polygon(0% var(--m), var(--m) 0%, calc(100% - var(--m)) 0%, 100% var(--m), 100% calc(100% - var(--m)), calc(100% - var(--m)) 100%, var(--m) 100%, 0% calc(100% - var(--m)));
+}
