--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -142,7 +142,7 @@
   --layout-background-texture-cards: none;
   --layout-top-header-background-color: transparent;
   --layout-header-background-filter: none;
-  --layout-header-background-drop-shadow: drop-shadow(0 1px 1px rgb(0 0 0 / 15%)) drop-shadow(0 0 2px rgb(0 0 0 / 25%));
+  --layout-header-background-drop-shadow: drop-shadow(0 0 2px rgb(0 0 0 / 40%));
 
   // === MINIMAL ===============================================================
   --minimal-main-box-shadow: 0 0 1px rgb(0 0 0 / 50%);
