--- a/css/customizer-snippets.css
+++ b/css/customizer-snippets.css
@@ -298,3 +298,16 @@
     text-align: left;
   }
 }
+
+.footer._footer-isolated {
+  --layout-link-hover: var(--fg-d200);
+  background-color: var(--bg-isolated-footer);
+  color: var(--fg-isolated-footer);
+  margin-top: 3rem;
+}
+.footer._footer-isolated .footer__wrapper {
+  margin: 2rem auto;
+}
+.footer._footer-isolated .breadcrumbs {
+  color: var(--fg-isolated-footer);
+}
