--- a/src/scss/customizer-snippets.scss
+++ b/src/scss/customizer-snippets.scss
@@ -407,3 +407,18 @@
     }
   }
 }
+
+.footer._footer-isolated {
+  --layout-link-hover: var(--fg-d200);
+  background-color: var(--bg-isolated-footer);
+  color: var(--fg-isolated-footer);
+  margin-top: 3rem;
+
+  .footer__wrapper {
+    margin: 2rem auto;
+  }
+
+  .breadcrumbs {
+    color: var(--fg-isolated-footer);
+  }
+}
