--- a/css/customizer-snippets.css
+++ b/css/customizer-snippets.css
@@ -311,3 +311,55 @@
 .footer._footer-isolated .breadcrumbs {
   color: var(--fg-isolated-footer);
 }
+
+.card:where(._unfolded, ._combined):is(._small, ._article) .card__body > .card__footer {
+  margin-top: 0;
+}
+.card:where(._unfolded, ._combined) .card__body {
+  padding: 0;
+}
+.card:where(._unfolded, ._combined) .card__body._article .card__tag-list._scrolling {
+  padding: 0 var(--this-padding);
+  margin-top: calc(-1 * var(--card-footer-margin-top, 1em));
+  margin-bottom: 0;
+}
+.card:where(._unfolded, ._combined) .card__body > .card__footer {
+  gap: 0;
+}
+.card:where(._unfolded, ._combined) .card__body > .card__footer .card__footer-box {
+  background: none;
+  border-top: var(--this-border-width, 1.5px) solid var(--secant);
+  border-radius: 0;
+}
+.card:where(._unfolded, ._combined) .card__body > .card__footer .card__footer-box._right {
+  border-left: var(--this-border-width, 1.5px) solid var(--secant);
+  min-width: 9cqw;
+}
+.card:where(._unfolded, ._combined) .card__header {
+  padding: var(--this-padding) var(--this-padding) 0;
+}
+.card:where(._unfolded, ._combined) .card__main {
+  padding: 0 var(--this-padding);
+}
+.card:where(._unfolded, ._combined) .card__main:is(._small, ._article, ._hidden-result) {
+  padding: var(--this-padding);
+}
+.card:where(._unfolded, ._combined)._recommendation .card__main {
+  padding-bottom: var(--this-padding);
+}
+.card:where(._unfolded, ._combined) .card__footer._article .card__footer-box,
+.card:where(._unfolded, ._combined) .card__body > .card__footer .card__footer-box:is(._left, :last-child) {
+  padding: calc(var(--this-padding) * 0.75) var(--this-padding);
+}
+
+.card._combined {
+  --this-border-width: 0;
+}
+.card._combined .card__footer._article .card__footer-box,
+.card._combined .card__body > .card__footer .card__footer-box:is(._left, :last-child) {
+  padding: calc(var(--this-padding) * 0.5) var(--this-padding) var(--this-padding);
+}
+.card._combined .rating-letter-label {
+  font-weight: 700;
+  opacity: 0.5;
+}
