--- a/src/scss/common/_utility.scss
+++ b/src/scss/common/_utility.scss
@@ -58,13 +58,13 @@ body:not(.is-editor):not(.is-admin) {
   grid-template-columns: repeat(auto-fill, minmax(var(--grid-columns-min, 308px), 1fr));
   gap:
     calc(var(--grid-columns-row-gap, max(3cqw, 1.5rem)) * var(--grid-columns-row-gap-multiplier, 1))
-    calc(var(--grid-columns-row-col, max(3cqw, 1.5rem)) * var(--grid-columns-row-col-multiplier, 1));
+    calc(var(--grid-columns-col-gap, max(3cqw, 1.5rem)) * var(--grid-columns-col-gap-multiplier, 1));
 
   // Fallback
   @supports not (width: 1cqw) {
     gap:
       calc(var(--grid-columns-row-gap, 1.5rem) * var(--grid-columns-row-gap-multiplier, 1))
-      calc(var(--grid-columns-row-col, 1.5rem) * var(--grid-columns-row-col-multiplier, 1));
+      calc(var(--grid-columns-col-gap, 1.5rem) * var(--grid-columns-col-gap-multiplier, 1));
   }
 
   &._collapse-on-mobile {
