Update modal divider line color

--- a/src/scss/common/_modals.scss
+++ b/src/scss/common/_modals.scss
@@ -91,7 +91,7 @@
     }
 
     > hr {
-      border-bottom: 1px solid var(--bg-200);
+      border-bottom: 1.5px solid var(--secant);
       margin: 0 12px;
     }
   }
